# enjam

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/enjam/: main.py
tests/: 64pix.mkv  test_cli.py
